# code-generation-example

./: Cargo.toml  LICENSE  build.rs
examples/: example.rs  generated_cfg.rs  generated_env.rs
src/: disabled.rs  enabled.rs  lib.rs
